# hello_cmake

./: .gitignore  CMakeLists.txt  README.md  hello.cpp  hello.hpp
src/: CMakeLists.txt
test/: CMakeLists.txt  main.cpp
